--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
 spring.datasource.password=12345678
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
