Aplicando mejores practicas y proteja una API Rest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=12345678
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+server.error.include-stacktrace=never
+
+api.security.secret=${JWT_SECRET:123456}
+
